# harmonie-client

./: .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
apps/harmonie/: .env.example  index.html  package.json  tsconfig.node.json  vite.config.js  vite.config.ts
apps/harmonie/public/: manifest.webmanifest  sw.js
apps/harmonie/src/: App.tsx  main.tsx
apps/harmonie/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/harmonie/src-tauri/capabilities/: default.json
apps/harmonie/src-tauri/icons/: icon.icns
apps/harmonie/src-tauri/src/: main.rs
apps/harmonie/src/api/: auth.ts  authStorage.ts  channels.ts  client.ts  conversations.ts  errors.ts  files.ts  guilds.ts  users.ts
apps/harmonie/src/features/auth/: AuthCard.tsx  AuthContext.tsx  ConnectPage.tsx  GuestRoute.tsx  RegisterPage.tsx  RequireAuth.tsx  useAuth.ts
apps/harmonie/src/features/channel/: ChannelContext.tsx  ChannelIndexPage.tsx  ChannelSection.tsx  ChannelSidebar.tsx  CreateChannelModal.tsx  EditChannelModal.tsx  TextChannelView.tsx
apps/harmonie/src/i18n/: index.ts  languages.ts
apps/harmonie/src/layouts/: AppLayout.tsx  ConversationsLayout.tsx  GuildLayout.tsx  LayoutSync.tsx  MainLayout.tsx  MainLayoutShell.tsx
apps/harmonie/src/routes/: index.tsx
apps/harmonie/src/styles/: index.css
apps/harmonie/src/types/: auth.ts  channel.ts  conversation.ts  file.ts  guild.ts  index.ts  user.ts  voice.ts
docker/: Dockerfile  docker-compose.yml  server.js
docs/: architecture.md  roadmap.md
(+189 files in other folders)
