[package]
name = "harmonie"
version = "0.0.1"
description = "Harmonie desktop client"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "harmonie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
